--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "chart.js": "^4.4.4",
     "next": "14.2.7",
     "react": "^18",
