--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.2",
     "@heroicons/react": "^2.1.5",
     "chart.js": "^4.4.4",
+    "framer-motion": "^11.11.1",
     "next": "14.2.7",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18"
